refactor(build): 简化构建配置并移除冗余文件
移除旧的 builder.config.js 和简化 builder.config.ts，改为使用零配置方案
更新 package.json 中的构建命令以明确指定输出格式
调整 tsconfig 配置并添加 tsconfig.build-clean.json

--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "ldesign-builder build",
+    "build": "ldesign-builder build -f esm,cjs,dts",
     "build:watch": "ldesign-builder build --watch",
     "dev": "rollup -c -w",
     "type-check": "vue-tsc --noEmit -p tsconfig.build.json",
