--- a/tsconfig.build-clean.json
+++ b/tsconfig.build-clean.json
@@ -6,22 +6,11 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "types": ["node", "vitest/globals"],
     "strict": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "exactOptionalPropertyTypes": false,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "declaration": true,
     "declarationMap": true,
-    "noEmit": false,
-    "emitDeclarationOnly": false,
-    "outDir": "./dist",
     "sourceMap": true,
+    "outDir": "dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
@@ -32,17 +21,13 @@
     "dist",
     "lib",
     "es",
-    "esm",
-    "cjs",
-    "types",
     "__tests__",
     "tests",
     "test",
     "e2e",
     "examples",
-    "*.test.ts",
-    "*.spec.ts",
     "**/*.test.ts",
     "**/*.spec.ts"
   ]
 }
+
